<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to" />

    <EditText
        android:layout_width="388dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="7dp"
        android:hint="@string/subject"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="292dp"
        android:layout_marginBottom="19dp"
        android:text="@string/send" />

    <EditText
        android:id="@+id/message"
        android:layout_width="375dp"
        android:layout_height="519dp"
        android:layout_alignTop="@+id/to"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="65dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/message"
        android:inputType="textPersonName" />
</RelativeLayout>